// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewCard renders with all props 1`] = `
<PreviewCard__Anchor
  href="#"
>
  <PreviewCard__BoxContainer
    isLarge="development · April 1st, 2019"
  >
    <PreviewCard__ImageContainer
      isLarge="development · April 1st, 2019"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        footer="By Halo"
        header="development · April 1st, 2019"
      >
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={true}
            invert={false}
            size="small"
          >
            development · April 1st, 2019
          </Text>
        </Box>
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            By Halo
          </Text>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__BoxContainer>
</PreviewCard__Anchor>
`;

exports[`PreviewCard renders with footer 1`] = `
<PreviewCard__Anchor
  href="#"
>
  <PreviewCard__BoxContainer
    isLarge="By Halo"
  >
    <PreviewCard__ImageContainer
      isLarge="By Halo"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        footer="By Halo"
      >
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            By Halo
          </Text>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__BoxContainer>
</PreviewCard__Anchor>
`;

exports[`PreviewCard renders with header 1`] = `
<PreviewCard__Anchor
  href="#"
>
  <PreviewCard__BoxContainer
    isLarge="development · April 1st, 2019"
  >
    <PreviewCard__ImageContainer
      isLarge="development · April 1st, 2019"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        header="development · April 1st, 2019"
      >
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={true}
            invert={false}
            size="small"
          >
            development · April 1st, 2019
          </Text>
        </Box>
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__BoxContainer>
</PreviewCard__Anchor>
`;

exports[`PreviewCard renders with long body text 1`] = `
<PreviewCard__Anchor
  href="#"
>
  <PreviewCard__BoxContainer>
    <PreviewCard__ImageContainer>
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt="Hello world, this preview card has all the props and has text that is over 70 characters in length"
          >
            Hello world, this preview card has all the props and has text that is ...
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__BoxContainer>
</PreviewCard__Anchor>
`;

exports[`PreviewCard renders with only Required props 1`] = `
<PreviewCard__Anchor
  href="#"
>
  <PreviewCard__BoxContainer>
    <PreviewCard__ImageContainer>
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__BoxContainer>
</PreviewCard__Anchor>
`;
